# grenka_finder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
dir_1/dir_2/: lsfile.txt  rock.yaml
dir_1/dir_2/dir_3/: lsfile.txt  rock.yaml
dir_1/dir_2/dir_4/dir_6/: lsfile.md  rock.yaml
src/: lib.rs  main.rs  structs.rs
